--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       href="./images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="/styles/general.css" />
-    <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="stylesheet" href="/styles/queries.css" />
+    <link rel="stylesheet" href="styles/general.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/queries.css" />
 
     <script defer src="script.js"></script>
 
